--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <div class="logo">
+            <h4>404 NOT FOUND</h4>
+        </div>
+
+        <div class="main">
+            <div class="left-div">
+                <img src="Scarecrow.png" alt="">
+            </div>
+            <div class="right-div">
+                <h1>I have bad news for you</h1>
+                <p>The page you are looking for might be removed or is temporarily unavailable</p>
+                <button class="btn">BACK TO HOMEPAGE</button>
+            </div>
+        </div>
+
+        <div class="blank">
+            
+        </div>
+
+    </div>
+
 </body>
 
 </html>
